# Open4th

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Open4thConfig.h.in  README.md
Open4th/: CMakeLists.txt  Open4th.h
Open4th/examples/: CMakeLists.txt  SecureChatClient.cpp  SecureChatServer.cpp  SecureMultiChatServer.cpp  SecureMultiStreamServer.cpp  SecureStreamClient.cpp  SecureStreamServer.cpp  UnsecureChatClient.cpp  UnsecureChatServer.cpp
Open4th/src/: PlatformDetection.h  Request.h  TCPReceiver.cpp  TCPReceiver.h  TCPReciever.h  TCPTransmitter.cpp  TCPTransmitter.h  UDPReceiver.cpp  UDPReceiver.h  UDPTransmitter.cpp  UDPTransmitter.h
Open4th/src/crypto/: Open4th_AES.cpp  Open4th_AES.h  Open4th_RSA.cpp  Open4th_RSA.h
Open4th/test/: CMakeLists.txt  Open4th.cpp
bbc/: bbc.cpp
bbs/: bbs.cpp
